# FBPINNs-for-Wave-Equation

./: README.md  pyproject.toml  setup.py
ejemplos/: fbpinns_1d_seno.ipynb
ejemplos/results/models/test/: model_00000000.jax  model_00010000.jax  model_00020000.jax  model_00030000.jax  model_00040000.jax  model_00050000.jax  model_00060000.jax  model_00070000.jax  model_00080000.jax  model_00090000.jax  model_00100000.jax
ejemplos/results/summaries/test/: constants_test.pickle  constants_test.txt  events.out.tfevents.1746488567.DESKTOP-QSJIIUU
fbpinn_wave/fbpinn_wave/: __init__.py  fbpinn_wave.py
resultados/exact/: exact75x75.mat  exact_any_cos.mat  exact_any_sin.mat  exact_extended.mat  exact_mix0.mat  exact_multi.mat  exact_new.mat  exact_real.mat  exact_triang.mat  exact_triang_extra.mat
resultados/results_real0/models/test/: model_00000000.jax  model_00010000.jax  model_00020000.jax  model_00030000.jax  model_00040000.jax  model_00050000.jax  model_00060000.jax  model_00070000.jax  model_00080000.jax  model_00090000.jax  model_00100000.jax  model_00110000.jax  model_00120000.jax  model_00130000.jax  model_00140000.jax  model_00150000.jax  model_00160000.jax  model_00170000.jax  model_00180000.jax  model_00190000.jax  model_00200000.jax  model_00210000.jax  model_00220000.jax  model_00230000.jax  model_00240000.jax  model_00250000.jax  model_00260000.jax  model_00270000.jax  model_00280000.jax  model_00290000.jax  model_00300000.jax  model_00310000.jax  model_00320000.jax  model_00330000.jax  model_00340000.jax  model_00350000.jax  model_00360000.jax  model_00370000.jax  model_00380000.jax  model_00390000.jax  (+1 more)
resultados/results_real0/summaries/test/: constants_test.pickle  (+1 more)
src/fbpinn_wave/: fbpinn_wave.py
(+279 files in other folders)
