[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "fbpinn_wave"
version = "0.1.4"
description = "Módulo complementario para visualización y generación de resultados de FBPINNs."
authors = [{name = "Matías Di Liscia", email = "matias.diliscia99@gmail.com"}]
dependencies = ["numpy<=1.26.4", "fbpinns>=0.1.0", "matplotlib", "jax", "optax"]

